After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 719762 - translate_crossing_mode() assertion error since recent scrolling fixes
translate_crossing_mode() assertion error since recent scrolling fixes
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: X11
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-12-03 10:42 UTC by Sebastien Bacher
Modified: 2013-12-05 02:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
x11: Handle all XI2 crossing mode values in switch (1.25 KB, patch)
2013-12-04 11:57 UTC, Carlos Garnacho
committed Details | Review
x11: Handle XINotifyPassiveGrab/Ungrab in focus events (2.00 KB, patch)
2013-12-04 11:57 UTC, Carlos Garnacho
committed Details | Review

Description Sebastien Bacher 2013-12-03 10:42:14 UTC
The issue has been reported on https://launchpad.net/bugs/1257004

It's happening with the scrolling fixes that went into GTK 3.8.8 when using xorg with the patches from http://lists.x.org/archives/xorg-devel/2013-November/039220.html

"Only seen after a xserver-xorg-core patched with 2 commits (https://bugs.freedesktop.org/show_bug.cgi?id=71762) is installed to fix scrolling & only when opening a *newly* created folder on the Desktop thru a double l. click with a usb mouse or a d. left click in touchpad mouse area

Opening folder with either mouse thru context menu is fine as is opening with a d. tap on touchpad
...
https://launchpadlibrarian.net/158110892/gdb-nautilus.txt

Gdk:ERROR:/build/buildd/gtk+3.0-3.8.7/./gdk/x11/gdkdevicemanager-xi2.c:789:translate_crossing_mode: code should not be reached

  • #0 __GI_raise
    at ../nptl/sysdeps/unix/sysv/linux/raise.c line 56
  • #1 __GI_abort
    at abort.c line 90
  • #2 _g_log_abort
    at /build/buildd/glib2.0-2.39.1/./glib/gmessages.c line 281
  • #3 g_assertion_message
    at /build/buildd/glib2.0-2.39.1/./glib/gtestutils.c line 2278
  • #4 g_assertion_message_expr
    at /build/buildd/glib2.0-2.39.1/./glib/gtestutils.c line 2293
  • #5 translate_crossing_mode
    at /build/buildd/gtk+3.0-3.8.7/./gdk/x11/gdkdevicemanager-xi2.c line 789
  • #6 gdk_x11_device_manager_xi2_translate_event
    at /build/buildd/gtk+3.0-3.8.7/./gdk/x11/gdkdevicemanager-xi2.c line 1580
  • #7 _gdk_x11_event_translator_translate
    at /build/buildd/gtk+3.0-3.8.7/./gdk/x11/gdkeventtranslator.c line 51
  • #8 gdk_event_source_translate_event
    at /build/buildd/gtk+3.0-3.8.7/./gdk/x11/gdkeventsource.c line 227
  • #9 _gdk_x11_display_queue_events
    at /build/buildd/gtk+3.0-3.8.7/./gdk/x11/gdkeventsource.c line 338
  • #10 gdk_display_get_event
    at /build/buildd/gtk+3.0-3.8.7/./gdk/gdkdisplay.c line 313

Comment 1 Carlos Garnacho 2013-12-04 11:57:03 UTC
Created attachment 263505 [details] [review]
x11: Handle all XI2 crossing mode values in switch

This fixes potential assertions if a GTK+ app gets to receive
a XINotifyPassiveGrab/Ungrab pointer crossing event, currently
triggerable by XIGrabEnter passive grabs.

http://bugzilla.gnome.org/show_bug.cgi?id=719762
Comment 2 Carlos Garnacho 2013-12-04 11:57:11 UTC
Created attachment 263506 [details] [review]
x11: Handle XINotifyPassiveGrab/Ungrab in focus events

The focus handling code is shared between core and XI2 implementations,
so just handle the extra XI2 types for passive grabs. Those must be dealt
with in the same way than active grabs. Focus events with this crossing
mode could happen currently through the XIGrabFocusIn passive grab.
Comment 3 Sebastien Bacher 2013-12-04 14:01:36 UTC
Those patches fix the issue indeed, thanks Carlos!
Comment 4 Matthias Clasen 2013-12-05 02:22:49 UTC
Attachment 263505 [details] pushed as 3dbabbd - x11: Handle all XI2 crossing mode values in switch
Comment 5 Matthias Clasen 2013-12-05 02:23:04 UTC
Attachment 263506 [details] pushed as f6c9a33 - x11: Handle XINotifyPassiveGrab/Ungrab in focus events